fix: adjust CSS separate selectors and properties with line breaks in according to rule 3.8

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 .description img {
   width: 100%;
 }
-.description .more_inf {
+.description,
+.more_inf {
   font-family: fantasy, cursive;
 }
 
@@ -36,10 +37,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
-input,button{
+input,
+button {
   outline: none;
 }
 button {
@@ -112,7 +115,7 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 li > button.main-page-element__delete:hover {
